SUBDIRS =

if BUILD_mp3
    SUBDIRS += mp3
endif

if BUILD_aac
    SUBDIRS += aac
endif

if BUILD_musepack
    SUBDIRS += musepack
endif

if BUILD_vorbis
    SUBDIRS += vorbis
endif

if BUILD_flac
    SUBDIRS += flac
endif

if BUILD_wavpack
    SUBDIRS += wavpack
endif

if BUILD_sndfile
    SUBDIRS += sndfile
endif

if BUILD_modplug
    SUBDIRS += modplug
endif

if BUILD_timidity
    SUBDIRS += timidity
endif

if BUILD_sidplay2
    SUBDIRS += sidplay2
endif

if BUILD_ffmpeg
    SUBDIRS += ffmpeg
endif

if BUILD_speex
    SUBDIRS += speex
endif
